# FlappyPixel

./: CMakeLists.txt  Pipe.cpp  Pipe.h  README.md  Scene.cpp  Scene.h  clear.sh  main.cpp  player.cpp  player.h
